--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -3,15 +3,17 @@
 </div>
 
 <% if @organization.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(@organization.errors.count, "error") %> prohibited this post from being saved:</h2>
+  <div class="alert alert-danger">
+    <div id="error_explanation">
+      <h2><%= pluralize(@organization.errors.count, "error") %> prohibited this post from being saved:</h2>
 
-  <ul>
-    <% @organization.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-  </ul>
-</div>
+      <ul>
+        <% @organization.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 <% end %>
 
 <%= form_for @organization, html: {class: "form-horizontal"} do |f| %>
