--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -2,43 +2,4 @@
   <h1>New Person</h1>
 </div>
 
-<% if @person.errors.any? %>
-  <div class="alert alert-danger">
-    <div id="error_explanation">
-      <h2><%= pluralize(@person.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-        <% @person.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-<% end %>
-
-<%= form_for @person, html: {class: "form-horizontal"} do |f| %>
-  <div class="form-group">
-    <%= f.label :first_name, class: "control-label col-sm-2" %>
-    <div class="col-sm-4">
-      <%= f.text_field :first_name, class: "form-control" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :last_name, class: "control-label col-sm-2" %>
-    <div class="col-sm-4">
-      <%= f.text_field :last_name, class: "form-control" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :date_of_birth, class: "control-label col-sm-2" %>
-    <div class="col-sm-4">
-      <%= f.date_field :date_of_birth, class: "form-control" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-4 col-sm-offset-2">
-      <%= f.submit class: "btn btn-primary" %>
-      <%= link_to "cancel", people_path, class: "btn btn-default" %>
-    </div>
-  </div>
-<% end %>
+<%= render 'form' %>
